# ansible_jinja2_playground

./: .containerignore  .dockerignore  .flake8  .gitignore  Containerfile  DEMO_README.md  INSTALL.md  LOOP_USAGE.md  README.md  README_URI.md  RELEASE_INFO_v2.2.0.md  RELEASE_NOTES_v2.0.md  RELEASE_NOTES_v2.1.md  RELEASE_NOTES_v2.2.md  REQUIREMENTS.md  TODO.yaml  USAGE.md  VERSION_UPDATE_SUMMARY.md  ansible-jinja2-playground-v2.2.0.tar.gz.sha256  check_compliance.py  cleanup_podman_images.sh  compose.yaml  deduplicate_history.py  demo.yaml  demo1.yaml  demo2.yaml  demo3.yaml  demo_advanced_report.yml  demo_server_audit.yml  minimal.yaml  pip-venv-requirements.txt  pyproject.toml  quick_cleanup_podman.sh  requirements.txt  run.py  test_loop_expressions.py  teste_delete.md
ansible-jinja2-playground/: ansible_jinja2_playground.html  ansible_jinja2_playground.py  deduplicate_history.py  requirements-dev.txt  run.py  scan_ansible_filters.py
ansible-jinja2-playground/conf/: README.md  (+1 more)
app/: ansible_jinja2_playground.html  ansible_jinja2_playground.py  deduplicate_history.py  scan_ansible_filters.py  test_scan.json
conf/: README.md  ansible_jinja2_playground.conf  ansible_jinja2_playground_history.json.backup_20250808_124702  ansible_jinja2_playground_history_examples.json
inputs/: README.md  ansible_data_14-08-2025-16-00-41.json  ansible_data_14-08-2025-16-06-56.json  ansible_data_14-08-2025-16-10-50.json  loop_example.json
tests/: README.md  TEST_EXECUTION_REPORT.md  __init__.py  cleanup_tests.py  run_all_tests.py  test_404.py  test_ansible_module_endpoints.py  test_duplicate_prevention.py  test_history_duplicate_prevention.py  test_history_endpoints.py  test_input_files_endpoints.py  test_main_page.py  test_render.py  test_settings_endpoints.py  test_simple_duplicate.py  test_utils.py
(+17 files in other folders)
