[tool.autopep8]
# Configuration for autopep8 to use 2-space indentation
indent-size = 2
max_line_length = 120
aggressive = 2

# Ignore the same indentation errors that flake8 ignores
ignore = ["E111", "E114", "E115", "E116", "E121", "E122", "E123", "E124", "E125", "E126", "E127", "E128", "E129", "E131", "E133"]

# Select which fixes to apply
select = ["E", "W"]

[tool.isort]
# Import sorting configuration
profile = "black"
line_length = 120
indent = 2
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible-jinja2-playground"
version = "2.1.0"
description = "A web application for testing and validating Jinja2 templates with Ansible-core 2.14 compatibility"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ansible Jinja2 Playground Team"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "autopep8",
    "flake8",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/your-username/ansible-jinja2-playground"
Repository = "https://github.com/your-username/ansible-jinja2-playground"
Issues = "https://github.com/your-username/ansible-jinja2-playground/issues"
